--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "sequelize": "sequelize",
@@ -33,5 +32,6 @@
     "@faker-js/faker": "^8.3.1",
     "dotenv-cli": "^7.3.0",
     "nodemon": "^3.0.2"
-  }
+  },
+  "description": ""
 }
